# py-clean-arch

./: .gitignore  README.md  pyproject.toml
logs/: server.txt
src/cmd/: main.py
src/core/database/: mongo.py
src/http/api/: api.py
src/http/api/user/: user.py
src/http/server/: server.py
src/models/: user.py
src/user/: repository.py  service.py
