[tool.poetry]
name = "py-clean-arch"
version = "0.1.0"
description = ""
authors = ["m0stly1 <anders_b28@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pymongo = {extras = ["srv"], version = "^4.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
